added two buttons for zoom in and out

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,7 @@
     <string name="app_name">lab36persistenmapapp</string>
     <string name="title_activity_maps">Map</string>
     <string name="seattle">Seattle</string>
+    <string name="search">Search</string>
+    <string name="zoom_out">Zoom Out</string>
+    <string name="zoom_in">Zoom In</string>
 </resources>
