--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="search">Search</string>
     <string name="zoom_out">Zoom Out</string>
     <string name="zoom_in">Zoom In</string>
+    <string name="toggle_map_type">Toggle Map Type</string>
 </resources>
