--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="zoom_out">Zoom Out</string>
     <string name="zoom_in">Zoom In</string>
     <string name="toggle_satellite_view">Toggle Satellite View</string>
+    <string name="go_to_k2">Go to K2</string>
 </resources>
