Last location persists, added multiple map type views.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">MapApp</string>
     <string name="title_activity_maps">Map</string>
-    <string name="seattle">Seattle</string>
+    <string name="cleveland">Cleveland</string>
     <string name="zoom_out">Zoom Out</string>
     <string name="zoom_in">Zoom In</string>
     <string name="toggle_view">Toggle View</string>
